--- a/css/index.css
+++ b/css/index.css
@@ -20,8 +20,8 @@ body { color: #666; font-size: 15px; font-family: 'Noto Sans KR', sans-serif; }
 .slide1 .slidetext p:nth-of-type(2) { padding: 30px 0 10px 0; }
 .slide1 .slidetext a { display: inline-block; margin: 40px 0; font-size: 15px; padding: 8px 35px; border: 1px solid #fff; }
 #section .article2 { text-align: center; padding: 50px 0;}
-#section .article2 > p:nth-of-type(1) { font-size: 36px; color: #000; font-weight: bold ; padding: 10px 0; }
-#section .article2 > p:nth-of-type(2) { font-size: 14px; font-weight: bold; }
+#section .article2 h2 { font-size: 36px; color: #000; font-weight: bold ; padding: 10px 0; }
+#section .article2 > p { font-size: 14px; font-weight: bold; }
 #section .article2 .infoimg { margin-top: 30px; }
 #section .article2 .infoimg li {  text-align: left; position: relative; float: left; width: 24%; height: 520px; margin-right: 1%; font-size: 14px; color: #fff;}
 #section .article2 .infoimg .img1 { background: url(../img/what1.jpg) no-repeat; background-size: cover;}
@@ -50,8 +50,8 @@ body { color: #666; font-size: 15px; font-family: 'Noto Sans KR', sans-serif; }
 #section .article3 .introbox p:nth-of-type(2) { font-size: 14px; padding: 30px 0; }
 #section .article3 .introbox a { display: inline-block; font-size: 13px; padding: 8px 30px; border: 1px solid #fff; }
 #section .article4 { text-align: center; }
-#section .article4 > p:first-child { font-size: 36px; color: #000; font-weight: bold; margin: 60px 0 20px; }
-#section .article4 > p:last-child { font-size: 14px; font-weight: bold; }
+#section .article4 > h2 { font-size: 36px; color: #000; font-weight: bold; margin: 60px 0 20px; }
+#section .article4 > p { font-size: 14px; font-weight: bold; }
 #section .article4 .pdinner1 { margin-top: 30px; }
 #section .article4 .pdinner1 > div { width: 32%; margin-right: 1%; margin-top: 10px; float: left; box-shadow: 0 0 5px #ddd;  }
 #section .article4 .pdinner1 > .innerbox > p:nth-of-type(1) { margin: 17px 20px; font-size: 17px; font-weight: bold; color: #000; }
