--- a/css/index.css
+++ b/css/index.css
@@ -1,78 +1,66 @@
-@charset "utf-8";
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap');
+@charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap');
 
+body{font-family: 'Noto Sans KR', sans-serif; color:#666; font-size:15px }
+.row{max-width: 1200px; margin:0 auto; padding:0 10px}
 
-body { color: #666; font-size: 15px; font-family: 'Noto Sans KR', sans-serif; }
-.row { max-width: 1200px; margin: 0 auto; padding: 0 10px;}
+#header { position: relative; }
+#header .top_menu { background: #f3f3f3; color: #999; font-size: 12px;  text-align: right;}
+#header .top_menu a { padding: 7px 20px; display: inline-block; border-right: 1px solid #e3e3e3; }
+#header .top_menu a:first-child { border-left: 1px solid #e3e3e3; }
+#header .top_menu a:hover { color: #dbb075; }
+/* 블록요소들을 한줄로 정렬하는 방법 :
+   1.둘다 float정렬   2. 둘 중에 높이가 낮은 자식을 position : absolute 정렬 */
+#header > .row { position: relative; }
+#header h1 { /*float: left;*/ padding: 25px 0; }
+#header #nav { /*float: right;*/ z-index: 999; position: absolute; top: 50%; transform: translateY(-50%); right: 0; color: #1e1e1e; font-size: 18px; }
+#header #nav .depth1 > li { float: left; position: relative; }
+#header #nav .depth1 > li > a { padding: 20px 40px; display: inline-block; }
+#header #nav .depth1 > li:hover > a { color: #00529b; }
+#header #nav .depth1 > li:hover > .depth2 { display: block; }
+#header .depth2 { display: none; position: absolute; top: 100%; left: 0; text-align: center; background: #555; font-size: 14px; color: #fff; width: 100%;  }
+#header .depth2 > li > a { padding: 18px 0; display: block; border-bottom: 1px solid #999; }
+#header .depth2 > li:last-child > a { border-bottom: none; }
+#header .depth2 > li:hover > a { background: #00529b; color: #dfe9fe; }
 
+/* .article1 .slide {  } */
+.article1 .slide1 { position: relative; height: 650px; background: url(../img/main_img1.jpg) no-repeat center; background-size: cover;  }
+.article1 .slide2 { display: none; position: relative; height: 650px; background: url(../img/main_img2.jpg) no-repeat center; background-size: cover;  }
+.article1 .slide3 { display: none; position: relative; height: 650px; background: url(../img/main_img3.jpg) no-repeat center; background-size: cover;  }
+.article1 .slide_text { position: absolute; top: 35%; left: 50%; transform: translate(-50%, -50%); color: #fff; text-align: center; }
+.article1 .slide_text h2 { font-size: 42px; line-height: 50px; font-weight: 800; }
+.article1 .slide_text p { font-size: 16px; line-height: 24px; font-weight: 400; margin: 30px 0; }
+.article1 .slide_text a { display: inline-block; padding: 10px 35px; border: 1px solid #fff; font-size: 15px; font-weight: 400; }
+.article1 .slide_text a:hover { background: rgba(255, 255, 255, 0.3); }
+.article2 > h2, .article4 > h2 { color: #000; font-size: 36px; line-height: 42px; font-weight: 700; padding: 80px 0 10px; text-align: center; }
+.article2 > p, .article4 > p  { padding-bottom: 40px;  text-align: center;}
+.article2 li { height: 520px; float: left; width: 24%; margin-right: 1.3333%; color: #fff; position: relative; }
+.article2 li:nth-child(1) { background: url(../img/what1.jpg) no-repeat center; background-size: cover; }
+.article2 li:nth-child(2) { background: url(../img/what2.jpg) no-repeat center; background-size: cover; }
+.article2 li:nth-child(3) { background: url(../img/what3.jpg) no-repeat center; background-size: cover; }
+.article2 li:nth-child(4) { background: url(../img/what4.jpg) no-repeat center; background-size: cover; margin-right: 0; }
+.article2 li div { position: absolute; bottom: 25px; left: 25px; right: 25px;}
+.article2 li > div > h3 { font-size: 24px; line-height: 32px; font-weight: 500; }
+.article2 li > div > p { padding: 20px 0; line-height: 1.5; font-size: 14px; }
+.article2 li > div > a {  display: inline-block; padding: 10px 40px; border: 1px solid rgba(255,255,255,0.5); font-size: 11px; font-weight: 600 !important; }
+.article2 li > div > a:hover { background: rgba(255, 255, 255, 0.3); }
+.article3 { height: 304px; background: url(../img/intro_bg.jpg) no-repeat center top; background-size: cover; background-attachment: fixed; margin-top: 100px; color: #fff; text-align: center; }
+.article3 h2 { font-size: 34px; line-height: 50px; padding-top: 80px; }
+.article3 p { padding: 15px 0 25px; }
+.article3 a { font-size: 13px; padding: 10px 30px; border: 1px solid rgba(255, 255, 255, 0.5); display: inline-block; }
+.article3 a:hover { background: rgba(255, 255, 255, 0.3); }
+.article4 li { float: left; width: 32%; margin-right: 2%; margin-bottom: 20px; border: 1px solid #999; text-align: center;}
+.article4 li:nth-child(3n) { margin-right: 0; }
+/* margin 값이 상하로 만나면 둘 중에 큰 값 하나만 적용 */
+.article4 li h4 { font-size: 17px; margin: 25px; font-weight: bold; }
+.article4 li p { font-size: 14px; margin: 25px; line-height: 1.5; }
+.article4 li img { transition: all 0.5s; }
+.article4 li img:hover { opacity: 0.6; }
 
-#header .top { background: #f3f3f3; }
-#header .top .usermenu { float:right; color: #999; font-size: 12px; float: right;}
-#header .top .usermenu a { padding: 5px 15px; border-right: 1px solid #ddd; display: inline-block; }
-#header .title h1 { float: left; padding: 15px 0;}
-#header .title #nav { float: right; font-size: 18px; color: #1e1e1e; }
-#header .title #nav .depth1 > li { position: relative; float: left; padding: 25px 35px; font-weight: bold;}
-#header .title #nav .depth1 > li:hover { color: #00529b; }
-#header .title #nav .depth1 > li > .depth2 { display: none; position: absolute; top: 90%; left: 0%; width: 100%; z-index: 999; text-align: center; }
-#header .title #nav .depth1 > li > .depth2 > li > a { padding: 10px 25px; background: #555; font-size: 14px; color: #fff; display: block; border-bottom: 1px solid #909090; }
-#header .title #nav .depth1 > li:hover .depth2 { display: block; }
-#header .title #nav .depth1 > li > .depth2 > li:hover a { background: #00529b; color: #dfe9fe; }
-
-
-#section .article1 .slide .slide1 { position: relative; background: url(../img/main_img3.jpg) no-repeat center; background-size: cover; height: 650px; }
-.slide1 .slidetext { position: absolute; top: 50%; left: 50%; transform: translate(-50%, -90%); color: #fff; font-size: 16px; text-align: center; }
-.slide1 .slidetext p:nth-of-type(1) { font-size: 42px; }
-.slide1 .slidetext p:nth-of-type(2) { padding: 30px 0 10px 0; }
-.slide1 .slidetext a { display: inline-block; margin: 40px 0; font-size: 15px; padding: 8px 35px; border: 1px solid #fff; }
-.slide1 .slidetext a:hover { background: rgba(0, 0, 0, 0.5); }
-#section .article2 { text-align: center; padding: 50px 0;}
-#section .article2 h2 { font-size: 36px; color: #000; font-weight: bold ; padding: 10px 0; }
-#section .article2 > p { font-size: 14px; font-weight: bold; }
-#section .article2 .infoimg { margin-top: 30px; }
-#section .article2 .infoimg li {  text-align: left; position: relative; float: left; width: 24%; height: 520px; margin-right: 1%; font-size: 14px; color: #fff;}
-#section .article2 .infoimg .img1 { background: url(../img/what1.jpg) no-repeat; background-size: cover;}
-#section .article2 .infoimg .img1 > .imgtext { position: absolute; top: 60%; left: 10%; }
-#section .article2 .infoimg .img1 > .imgtext > p:nth-of-type(1) { font-size: 24px; padding-bottom: 30px; }
-#section .article2 .infoimg .img1 > .imgtext > p:nth-of-type(2) { padding-right: 40px; line-height: 1.5; }
-#section .article2 .infoimg .img1 > .imgtext > a { display: inline-block; font-size: 11px; padding: 8px 40px; text-align: center; margin-top: 20px; border: 1px solid #fff; }
-#section .article2 .infoimg .img1 > .imgtext > a:hover { background: rgba(255, 255, 255, 0.5); color: #000; }
-#section .article2 .infoimg .img2 { background: url(../img/what2.jpg) no-repeat; background-size: cover;}
-#section .article2 .infoimg .img2 > .imgtext { position: absolute; top: 60%; left: 10%; }
-#section .article2 .infoimg .img2 > .imgtext > p:nth-of-type(1) { font-size: 24px; padding-bottom: 30px; }
-#section .article2 .infoimg .img2 > .imgtext > p:nth-of-type(2) { padding-right: 40px; line-height: 1.5; }
-#section .article2 .infoimg .img2 > .imgtext > a { display: inline-block; font-size: 11px; padding: 8px 40px; text-align: center; margin-top: 20px; border: 1px solid #fff; }
-#section .article2 .infoimg .img2 > .imgtext > a:hover { background: rgba(255, 255, 255, 0.5); color: #000; }
-#section .article2 .infoimg .img3 { background: url(../img/what3.jpg) no-repeat; background-size: cover;}
-#section .article2 .infoimg .img3 > .imgtext { position: absolute; top: 60%; left: 10%; }
-#section .article2 .infoimg .img3 > .imgtext > p:nth-of-type(1) { font-size: 24px; padding-bottom: 30px; }
-#section .article2 .infoimg .img3 > .imgtext > p:nth-of-type(2) { padding-right: 40px; line-height: 1.5; }
-#section .article2 .infoimg .img3 > .imgtext > a { display: inline-block; font-size: 11px; padding: 8px 40px; text-align: center; margin-top: 20px; border: 1px solid #fff; }
-#section .article2 .infoimg .img3 > .imgtext > a:hover { background: rgba(255, 255, 255, 0.5); color: #000; }
-#section .article2 .infoimg .img4 { background: url(../img/what4.jpg) no-repeat; background-size: cover;}
-#section .article2 .infoimg .img4 > .imgtext { position: absolute; top: 60%; left: 10%; }
-#section .article2 .infoimg .img4 > .imgtext > p:nth-of-type(1) { font-size: 24px; padding-bottom: 30px; }
-#section .article2 .infoimg .img4 > .imgtext > p:nth-of-type(2) { padding-right: 40px; line-height: 1.5; }
-#section .article2 .infoimg .img4 > .imgtext > a { display: inline-block; font-size: 11px; padding: 8px 40px; text-align: center; margin-top: 20px; border: 1px solid #fff; }
-#section .article2 .infoimg .img4 > .imgtext > a:hover { background: rgba(255, 255, 255, 0.5); color: #000; }
-#section .article3 { position: relative; background: url(../img/intro_bg.jpg) no-repeat center; background-size: cover; height: 304px; color: #fff; }
-#section .article3 .introbox { position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);  text-align: center;}
-#section .article3 .introbox p:nth-of-type(1) { font-size: 34px; }
-#section .article3 .introbox p:nth-of-type(2) { font-size: 14px; padding: 30px 0; }
-#section .article3 .introbox a { display: inline-block; font-size: 13px; padding: 8px 30px; border: 1px solid #fff; }
-#section .article3 .introbox a:hover { background: rgba(0, 0, 0, 0.5); }
-#section .article4 { text-align: center; }
-#section .article4 > h2 { font-size: 36px; color: #000; font-weight: bold; margin: 60px 0 20px; }
-#section .article4 > p { font-size: 14px; font-weight: bold; }
-#section .article4 .pdinner1 { margin-top: 30px; }
-#section .article4 .pdinner1 > div { width: 32%; margin-right: 1%; margin-top: 10px; float: left; box-shadow: 0 0 5px #ddd;  }
-#section .article4 .pdinner1 > .innerbox > p:nth-of-type(1) { margin: 17px 20px; font-size: 17px; font-weight: bold; color: #000; }
-#section .article4 .pdinner1 > .innerbox > p:nth-of-type(2) { padding: 0 10px 25px 10px; font-size: 14px; line-height: 1.5;}
-
-
-#footer { background: #333; color: #ddd; padding: 30px 0; text-align: center; margin-top: 50px; }
-#footer .sns a i { padding: 0 10px; font-size: 17px; color: #fff; }
-#footer .address p { line-height: 1.5; font-size: 12px; }
-#footer .address p:nth-of-type(1) { margin-top: 20px; }
-#footer .address p:nth-of-type(2) { margin-bottom: 20px; }
-#footer .address > a { border: 1px solid #ddd; font-size: 11px; padding: 3px 10px; }
-#footer .address > a:hover { font-weight: bold; }
+#footer { margin-top:80px; background: #333; padding: 30px 0px; text-align: center; font-size: 12px; line-height: 18px; color:#ddd; }
+#footer .sns a { transition: all 0.3s; font-size: 14px; display: inline-block; width: 32px; height: 32px; line-height: 32px; background: rgba(255, 255, 255, 0.1); border-radius: 50%; margin: 0 5px;}
+#footer .sns a:hover { background: rgba(255, 255, 255, 0.3); }
+#footer .info { padding: 20px 0; }
+#footer .info span { padding: 5px 20px; }
+#footer .privacy a { font-size:11px; padding:3px 10px; display:inline-block; border: 1px solid rgba(255,255,255,0.5); color:#bbb; transition:all 0.4s; }
+#footer .privacy a:hover { background: #999; border: 1px solid #999; color: #FFF; }
