--- a/css/index.css
+++ b/css/index.css
@@ -34,12 +34,13 @@ button { outline: none; }
 .article1 .slide1 { height:650px; background:url(../img/main_img1.jpg) no-repeat center; background-size:cover; position:relative; }
 .article1 .slide2 { height:650px; background:url(../img/main_img2.jpg) no-repeat center; background-size:cover;  position:relative; }
 .article1 .slide3 { height:650px; background:url(../img/main_img3.jpg) no-repeat center; background-size:cover;  position:relative; }
-.article1 .slide_text { position:absolute; top:35%;left:50%; transform:translate(-50%, -50%); color:#fff; text-align:center;} 
+.article1 .slide_text { opacity: 0; position:absolute; top:35%;left:50%; transform:translate(-50%, -50%); color:#fff; text-align:center;} 
 .article1 .slide_text h2 { font-size: 42px;line-height: 50px; font-weight: 800; color: #fff !important; }
 .article1 .slide_text p {font-size: 16px;line-height: 24px; font-weight: 400;margin:30px 0; }
 .article1 .slide_text a { display: inline-block; padding: 10px 35px; border: 1px solid #FFF; font-size: 15px; font-weight: 400;}
 /* a버튼에 호버하면 배경색 background: rgba(255,255,255,0.3); */
 .article1 .slide_text a:hover {background: rgba(255,255,255,0.3);}
+.article1 .slide.slick-active .slide_text { opacity: 1; }
 .article1 .slide.slick-active .slide_text h2 { animation: fadeInRight 0.5s both 0.6s; }
 .article1 .slide.slick-active .slide_text p { animation: fadeIn 0.5s both 1.1s; }
 .article1 .slide.slick-active .slide_text a { animation: fadeIn 0.5s both 1.1s; }
